--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+
+.container {
+    width: 75%;
+    margin: 3rem auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.word-section {
+    border: 1px solid black;
+    padding: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.timer-section {
+    text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.input-section {
+    display: block;
+    margin: 7rem auto;
+    text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.input-section input {
+    width: 70%;
+    padding: 1rem;
+    font-size: 1rem;
+    margin-bottom: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.result-section {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.word {
+    display: inline-block;
+    margin: .2rem;
+}
+
+.background {
+    background-color: rgb(216, 213, 213);
+}
+
+.failed {
+    background-color: rgb(228, 66, 66);
+}
+
+.successful {
+    background-color: rgb(28, 211, 28);
 }
